@@ -1,3 +1,5 @@
+* show_reciprocal_space_plane function to plot a cut in reciprocal space
+  together with the peak positionn of a given material
 * new FourC experiment class, equivalent to HXRD, but using a four circle
   goniometer for consistent Q2Ang and Ang2Q functions
 * add spline coefficients to PowderModel fits
